# BeetleRecomp

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  BeetleRecomp.toml  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  overlays.us.txt  patches.toml
docs/: HEADLESS_TESTING.md  HUD_MENU_SYSTEM_MAP.md  HUD_MENU_WORKFLOW.md  R6_FILMROLL_FINDINGS.md  SEAM_FIX_PLAN.md  SETTINGS_MENU_AND_HIGH_FPS.md  STATUS.md  TODO.md
patches/: Makefile  custom_syms.toml  example_patch.c  patch_helpers.h  patches.ld  syms.ld
rsp/: aspMain.bar.us.toml
scripts/: fetch-elf.ps1  fetch-elf.sh  fix-recompiled.sh  gen-overlays.sh  setup.ps1  setup.sh
src/game/: config.cpp  config.hpp  input_config.cpp  input_config.hpp
src/main/: bar_cheats.cpp  bar_cheats.h  bar_config.cpp  bar_crash.cpp  bar_input.cpp  bar_input.hpp  bar_preempt.cpp  hw_stubs.cpp  main.cpp  os_unimpl_stubs.cpp  overlay_bridge.cpp  register_overlays.cpp  rt64_render_context.cpp
src/ui/: bar_ui.cpp  bar_ui.h  ui_renderer.cpp  ui_renderer.h
src/ui/assets/: cheats.rml  config.rml  controls.rml  launcher.rml  pause.rml
tools/: screenshot.ps1  send.ps1  shot.ps1  uitest.ps1
